--- a/Chapter1.ipynb
+++ b/Chapter1.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "id": "lIYdn1woOS1n"
       },
@@ -165,9 +165,62 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "bandit = Bandit()\n",
+        "Qs = jnp.zeros(10)#マシンごとに常態価値が存在\n",
+        "ns = jnp.zeros(10)#マシンのプレイ回数"
+      ],
       "metadata": {
         "id": "QwBPQTvuFfRv"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for n in range(10):\n",
+        "    key = random.PRNGKey(int(time.time()*1000))\n",
+        "    action = random.randint(key,minval=0,maxval=10,shape=(1,))\n",
+        "    reward = bandit.play(action)\n",
+        "    ns = ns.at[action].set(ns[action]+1)\n",
+        "    Qs = Qs.at[action].set(Qs[action] + (reward - Qs[action])/ns[action])\n",
+        "    print(Qs)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VsPsJXRaGGbI",
+        "outputId": "b6091e55-9af0-4ec5-c9ec-982d70332255"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.  0.  0.  0.  0.  0.  0.5 0.  0.  0. ]\n",
+            "[0.  0.  0.  0.  0.  0.  0.5 0.  0.  0. ]\n",
+            "[0.  0.  0.  0.  0.  0.  0.5 0.  1.  0. ]\n",
+            "[0.  0.  0.  0.  0.  0.  0.5 0.  1.  0. ]\n",
+            "[0.  0.  0.  0.  0.  0.  0.5 0.  1.  0. ]\n",
+            "[0.  0.  0.  0.  0.  0.  0.5 0.  1.  1. ]\n",
+            "[0.  0.  0.  0.  1.  0.  0.5 0.  1.  1. ]\n",
+            "[0.5 0.  0.  0.  1.  0.  0.5 0.  1.  1. ]\n",
+            "[0.5       0.        0.        0.        1.        0.        0.3333333\n",
+            " 0.        1.        1.       ]\n",
+            "[0.5       0.        0.        0.        1.        0.        0.3333333\n",
+            " 0.        1.        1.       ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eJ-___qUG08s"
       },
       "execution_count": null,
       "outputs": []
